More styling changes! - updating padding on buttons - updating spacing on the character sheet - fixing layout and stylining on the bounty points cart and its empty state - changing around the layout for the upgrade row to have it make more sense visually.

--- a/src/components/character_view.css
+++ b/src/components/character_view.css
@@ -101,7 +101,7 @@
 
 .character-sheet {
     display: flex;
-    padding: 12px;
+    padding: 24px;
     flex-direction: column;
     align-items: flex-start;
     gap: 24px;
@@ -111,8 +111,8 @@
 
 .character-sheet__inner{
     display: grid;
-    row-gap: 64px;
-    column-gap: auto;
+    row-gap: 16px;
+    column-gap: 40px;
     flex: 1 0 0;
     align-self: stretch;
     grid-template-rows: auto;
@@ -133,15 +133,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px;
-}
-
-.stat-group_roll-mode {
-    max-width: 250px;
-}
-
-.stat-group_spend-mode {
-    max-width: 280px;
+    gap: 4px;
 }
 
 .stat-group_knowledge{
@@ -153,7 +145,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px;
+    gap: 4px;
     align-self: stretch;
 }
 
@@ -162,7 +154,7 @@
     flex-direction: column;
     align-items: flex-start;
     align-self: stretch;
-    gap: 8px;
+    gap: 4px;
 }
 
 .stat-group__item {
