--- a/src/components/stat_upgrade_button.css
+++ b/src/components/stat_upgrade_button.css
@@ -8,8 +8,8 @@
     transform: translateX(-25px);
     inset: unset;
     position: absolute;
-    left: 60px;
-    bottom: 40px;
+    right: 80px;
+    bottom: 100px;
 }
 
 [popover] {
@@ -20,7 +20,7 @@
     border: 1px solid var(--blue-6);
     border-radius: 8px;
     padding: 16px 16px;
-    width: 280px;
+    /* width: 280px; */
     /* position: absolute;
     bottom: 50;
     left: 50; */
